# power-paste

./: Changelog.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: window-resize-feature.md
scripts/: extract-release-notes.mjs
src/: App.vue  i18n.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  commands.rs  history.rs  lan_receiver.rs  lib.rs  models.rs  repository.rs  runtime.rs  sound.rs  storage.rs  update.rs  usecases.rs
src-tauri/src/clipboard/: capture_router.rs  mod.rs  payload.rs  plugin_reader.rs
src-tauri/src/clipboard/native_writer/: windows.rs
src-tauri/src/commands/: settings.rs
src/components/: ConfirmModal.vue  HistoryListItem.vue  LanReceiverModal.vue  SearchBar.vue  SettingsModal.vue
src/composables/: useHistory.js  useHistoryFilters.js  useHistorySelection.js  useKeyboardShortcuts.js  useLanReceiver.js  usePanelSizePersistence.js  useSettings.js  useUpdater.js  useWindowSize.js
src/router/: index.js
src/services/: tauriApi.js
src/styles/: base.css
src/views/: SettingsView.vue
